<resources>
    <string name="app_name">ShoeStore</string>
    <string name="login_label">Email</string>
    <string name="password_label">Password</string>
    <string name="login_hint">Type your email</string>
    <string name="password_hint">Type your password</string>
    <string name="login_button_text">Login</string>
    <string name="sign_up_text">Not a member?</string>
    <string name="sign_up_button">Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text_1">Welcome to…</string>
    <string name="the_shoe_store">My Shoe Store!</string>
    <string name="next_button_text">NEXT</string>
    <string name="what_shoes_text_1">Do you have a broken shoes?</string>
    <string name="what_shoes_text_2">You want to refresh your look?</string>
    <string name="what_shoes_text_3">Click "Shoe List" to check out our available listings!</string>
    <string name="shoe_listings">Shoe List</string>
    <string name="to_shoe_detail">To Shoe Detail</string>
    <string name="logout_menu_text">Logout</string>
    <string name="shoe_name_label">Shoe Name: </string>
    <string name="company_label">Company: </string>
    <string name="shoe_size_label">Size: </string>
    <string name="description_label">Description: </string>
    <string name="shoe_name_hint">Type the shoe name</string>
    <string name="company_hint">Type the company name…</string>
    <string name="shoe_size_hint">What is the shoe size?</string>
    <string name="description_hint">Anything to add?</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
</resources>
