<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="100dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_shoes_text_1"
            android:textSize="20sp"
            android:paddingBottom="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_shoes_text_2"
            android:textSize="20sp"
            android:paddingBottom="30dp" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:text="@string/what_shoes_text_3"
            android:textSize="20sp" />


        <Button
            android:id="@+id/to_shoe_list_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_listings"
            android:background="@color/colorPrimary"
            android:layout_marginTop="80dp"
            android:padding="16dp"
            android:textColor="@color/light_gray"
            />
    </LinearLayout>
</layout>