<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- LinearLayout is used here to displace simple welcome text and a button to navigate to next view-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="200dp"
        tools:context=".screens.welcome.WelcomeFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text_1"
            android:textSize="24sp"
            android:paddingBottom="30dp"
            tools:layout_editor_absoluteX="132dp"
            tools:layout_editor_absoluteY="154dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_shoe_store"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/to_instructions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button_text"
            android:background="@color/colorPrimary"
            android:layout_marginTop="80dp"
            android:textColor="@color/light_gray"
            />
    </LinearLayout>

</layout>
