<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoeListViewModel"
            type="com.udacity.shoestore.screens.shoelist.ShoeListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.shoedatail.ShoeDetailFragment">

        <TextView
            android:id="@+id/company_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/company_label"
            android:textColor="@android:color/black"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintBottom_toTopOf="@+id/edit_text_company_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_shoe_name" />

        <TextView
            android:id="@+id/shoe_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="100dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/shoe_name_label"
            android:textColor="@android:color/black"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintBottom_toTopOf="@+id/edit_text_shoe_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/description_label"
            android:textColor="@android:color/black"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_shoe_name3" />

        <TextView
            android:id="@+id/shoe_size_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/shoe_size_label"
            android:textColor="@android:color/black"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintBottom_toTopOf="@+id/edit_text_shoe_name3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_company_label" />

        <EditText
            android:id="@+id/edit_text_shoe_name"
            android:layout_width="0dp"
            android:layout_height="39dp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:ems="10"
            android:hint="@string/shoe_name_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName|text"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintBottom_toTopOf="@+id/company_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_label" />

        <EditText
            android:id="@+id/edit_text_shoe_name3"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:ems="10"
            android:hint="@string/shoe_size_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintBottom_toTopOf="@+id/description_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_label" />

        <EditText
            android:id="@+id/edit_text_company_label"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:ems="10"
            android:hint="@string/company_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName|text"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintBottom_toTopOf="@+id/shoe_size_label"
            app:layout_constraintEnd_toEndOf="@+id/edit_text_shoe_name3"
            app:layout_constraintStart_toStartOf="@+id/company_label"
            app:layout_constraintTop_toBottomOf="@+id/company_label" />

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="300dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description_hint"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_label" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="36dp"
            android:background="@android:color/holo_red_dark"
            android:text="@string/cancel_button"
            android:textColor="@color/light_gray"
            android:onClick="@{() -> shoeListViewModel.onCancel()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="36dp"
            android:background="@color/colorPrimary"
            android:text="@string/save_button"
            android:textColor="@color/light_gray"
            android:onClick="@{() -> shoeListViewModel.onSave()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel_button"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>